tests/121-sheet-writestrAsnum.out
bool(false)
bool(true)

Fatal error: Uncaught ExcelException: Failed to read cell in row 0, column 0 with error 'can't get access to format in row 0 in trial version' in /Users/maximshugurov/Projects/LibXL/libxl_php8/tests/121-sheet-writestrAsnum.php:15
Stack trace:
#0 /Users/maximshugurov/Projects/LibXL/libxl_php8/tests/121-sheet-writestrAsnum.php(15): ExcelSheet->read(0, 0)
#1 {main}
  thrown in /Users/maximshugurov/Projects/LibXL/libxl_php8/tests/121-sheet-writestrAsnum.php on line 15